test/parser/string_literal/invalid_hex_escape_error3.exp
Error: Invalid hex escape sequence, expected exactly two hex digits following `\x`
test/parser/string_literal/invalid_hex_escape_error3.myte:4:3-6
 4 |   "\xFG";
   |    ^^^